@@ -50,6 +50,7 @@ Changelog
  * Fix: Strip out HTML tags from `RichTextField` & `RichTextBlock` search index content (Timothy Bautista)
  * Fix: Avoid using null on string `Site.site_name` blank values to avoid different values for no name (Coen van der Kamp)
  * Fix: Fix deprecation warnings on Elasticsearch 7 (Yngve Høiseth)
+ * Fix: Remove use of Node.forEach for IE 11 compatibility in admin menu items (Thibaud Colas)
 
 
 2.9 (04.05.2020)
